--- a/15.md
+++ b/15.md
@@ -1,7 +1,12 @@
-The first time you use it, it charges you $20 to download it.
+# Opt-In Obedience™
 
-The first time you use it, the app makes you take a picture of your face so it can recognize you.
+A wearable badge that gently shocks you whenever you express **non-conforming opinions**.
 
-The first time you use it, you're prompted to enter your name and address and credit card information so that it can make sure that you're not a robot.
+You gain “Freedom Credits” by:
+- Agreeing with trending influencers
+- Reposting state-approved content
+- Completing your daily Pledge of Alignment™
 
-You can't move on to anything else without entering your name, address, credit card info, social security number, and blood type. It gives you no reason why these things are necessary for a simple app like this one.
+Perfect for corporate employees, gig workers, and obedient citizens.
+
+The higher your Freedom Credits, the more ad-free seconds you get each day.
